src/test/ui/parser/attr-dangling-in-fn.rs
// error-pattern:expected statement

fn f() {
  #[foo = "bar"]
}

fn main() {
}
